@@ -1,6 +1,10 @@
+2008-10-22  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Fixed bug #8636: Hardcoded labels in Configuration module (thanks to Christopher Stelmaszyk)
+
 2008-10-22  Stanislas Rolland  <typo3@sjbr.ca>
 
-	* Fixed bug #5019: htmlARea RTE hangs while editing link in Firefox
+	* Fixed bug #5019: htmlArea RTE hangs while editing link in Firefox
 
 2008-10-21  Oliver Hader  <oliver@typo3.org>
 
